--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
         </nav>
 
         <!-- Main Content -->
-        <main class="section">
+        <main class="section is-flex-grow-1">
             <div class="container">
                 <!-- Tab Content -->
                 <div class="content">
@@ -323,7 +323,7 @@
                         </div>
 
                         <!-- Enhanced Execution Timeline -->
-                        <div class="box" x-show="executionTimeline.length > 0">
+                        <div class="box execution-timeline-box" x-show="executionTimeline.length > 0">
                             <h2 class="title is-5">
                                 Execution Timeline
                                 <span class="tag is-pulled-right" x-text="`${executionTimeline.length} events`"></span>
